kubernetes/indexer/voimain-indexer/i4-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: i4-1-voimain-indexer-mainnet-db-deployment
  namespace: voimain-indexer-mainnet
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: i4-1-voimain-indexer-mainnet-db
  template:
    metadata:
      labels:
        app: i4-1-voimain-indexer-mainnet-db
    spec:
      nodeName: sch-g-01
      containers:
        - name: i4-1-db
          image: postgres:14
          imagePullPolicy: IfNotPresent
          #command: ["/bin/sh", "-ec", "while :; do date; sleep 60 ; done"]
          resources:
            requests:
              memory: '10000Mi'
              cpu: '1000m'
            limits:
              memory: '20000Mi'
              cpu: '8000m'
          ports:
            - containerPort: 5432
              protocol: 'TCP'
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            runAsUser: 999
            runAsGroup: 999
          lifecycle:
            preStop:
              exec:
                command: ['sleep', '10']
          volumeMounts:
            - name: i4-1-voimain-indexer-db-mainnet-pvc
              mountPath: /data

      volumes:
        - name: i4-1-voimain-indexer-db-mainnet-pvc
          persistentVolumeClaim:
            claimName: i4-1-voimain-indexer-db-mainnet-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: i4-1-voimain-indexer-mainnet-db-service
  namespace: voimain-indexer-mainnet
spec:
  type: ClusterIP
  selector:
    app: i4-1-voimain-indexer-mainnet-db
  ports:
    - name: algoclient
      protocol: TCP
      appProtocol: http
      port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: i4-1-voimain-indexer-mainnet-conduit-deployment
  namespace: voimain-indexer-mainnet
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: i4-1-voimain-indexer-mainnet-conduit
  template:
    metadata:
      labels:
        app: i4-1-voimain-indexer-mainnet-conduit
    spec:
      nodeName: sch-g-01
      containers:
        - name: i4-1-conduit
          image: algorand/conduit:latest
          command:
            ['/bin/bash', '-ec', 'date; sleep 10; date; conduit; sleep 100 ; date; ']
            #while ! timeout 1 bash -c "echo > /dev/tcp/localhost/8080";  do sleep 1 && echo -n .; done
          #command: ["/bin/bash", "-ec", "while :; do date; sleep 60 ; done"]
          securityContext:
            runAsUser: 999
            runAsGroup: 999
          volumeMounts:
            - name: i4-1-conduit-conf
              mountPath: /data/conduit.yml
              subPath: conduit.yml
            - name: i4-1-voimain-conduit-1-pvc
              mountPath: /data
        - name: i4-1-follow-node
          image: scholtz2/voimain-follow-node:3.25.0-stable
          command:
            [
              '/bin/bash',
              '-ec',
              'date; sleep 1 ;cp --update=none config.json data/config.json; cp --update=none voimain/genesis.json data/genesis.json; date; goal node start; date; while :; do date; sleep 600 ; done ',
            ]
          # command: ["goal", "node", "start"]
          # command: ["/bin/bash", "-ec", "while :; do date; sleep 600 ; done"]
          # lifecycle:
          #   postStart:
          #     exec:
          #       command: ["goal", "node", "start"]
          imagePullPolicy: Always
          resources:
            requests:
              memory: '4000Mi'
              cpu: '2000m'
            limits:
              memory: '20000Mi'
              cpu: '16000m'
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 10
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
            terminationGracePeriodSeconds: 1
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: i4-1-voimain-follow-main-vol-root-1
              mountPath: /app/data
            - name: i4-1-voimain-indexer-secret
              subPath: INDEXER_ALGOD_TOKEN
              mountPath: /app/data/algod.token
            - name: i4-1-voimain-indexer-secret
              subPath: INDEXER_API_TOKEN
              mountPath: /app/data/algod.admin.token

      volumes:
        - name: i4-1-conduit-conf
          configMap:
            name: i4-1-conduit-conf
        - name: i4-1-voimain-indexer-db-mainnet-pvc
          persistentVolumeClaim:
            claimName: i4-1-voimain-indexer-db-mainnet-pvc
        - name: i4-1-voimain-follow-main-vol-root-1
          persistentVolumeClaim:
            claimName: i4-1-voimain-follow-main-vol-root-1
        - name: i4-1-voimain-conduit-1-pvc
          persistentVolumeClaim:
            claimName: i4-1-voimain-conduit-1-pvc
        - name: i4-1-voimain-indexer-secret
          secret:
            secretName: i4-1-voimain-indexer-secret

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: i4-1-voimain-indexer-mainnet-indexer-deployment
  namespace: voimain-indexer-mainnet
spec:
  replicas: 1
  selector:
    matchLabels:
      appId: i4-1-voimain-indexer-mainnet
  template:
    metadata:
      labels:
        appId: i4-1-voimain-indexer-mainnet
        app: voimain-indexer-mainnet
    spec:
      containers:
        - name: i4-1-indexer
          image: scholtz2/algorand-indexer:v3.5.0-stable
          imagePullPolicy: Always
          #command: ["/bin/bash", "-ec", "while :; do date; sleep 60 ; done"]
          command: ['/bin/bash', '-c', 'algorand-indexer daemon']

          ports:
            - containerPort: 8980
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8980
            initialDelaySeconds: 10
            timeoutSeconds: 5
            failureThreshold: 2
          livenessProbe:
            tcpSocket:
              port: 8980
            initialDelaySeconds: 20
            timeoutSeconds: 5
            failureThreshold: 2
            terminationGracePeriodSeconds: 1
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
