kubernetes/indexer/voimain-indexer/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: voimain-indexer-8980-service
  namespace: voimain-indexer-mainnet
spec:
  type: ClusterIP
  selector:
    app: voimain-indexer-mainnet
  ports:
    - name: indexer
      protocol: TCP
      appProtocol: http
      port: 8980
      targetPort: 8980
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voimain-indexer-v3-ingress
  namespace: voimain-indexer-mainnet
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "server: hide";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: DENY";
      proxy_set_header X-Indexer-API-Token aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa;
spec:
  tls:
    - hosts:
        - voimain-indexer-public.de.nodes.biatec.io
      secretName: tls-voimain-indexer-public.de.nodes.biatec.io
  rules:
    - host: voimain-indexer-public.de.nodes.biatec.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voimain-indexer-8980-service
                port:
                  number: 8980
